roles/openshift-apps/librariesio2fedmsg/files/service.yml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: librariesio2fedmsg
    labels:
      app: librariesio2fedmsg
  spec:
    ports:
    - name: 9940-tcp
      port: 9940
      protocol: TCP
      targetPort: 9940
    selector:
      deploymentconfig: librariesio2fedmsg
    sessionAffinity: None
    type: ClusterIP
kind: List
metadata: {}
