roles/openshift-apps/librariesio2fedmsg/files/route.yml
apiVersion: v1
items:
- apiVersion: v1
  kind: Route
  metadata:
    name: librariesio2fedmsg
    labels:
      app: librariesio2fedmsg
  spec:
    port:
      targetPort: 9940-tcp
    to:
      kind: Service
      name: librariesio2fedmsg
      weight: 100
    wildcardPolicy: None
kind: List
metadata: {}
